--- a/security/style.css
+++ b/security/style.css
@@ -5,3 +5,19 @@ img {
 #long {
 	width: 20%;
 }
+
+body {
+	padding-left: 15%;
+	padding-right: 15%;
+	font-family: verdana;
+	font-size: 14px;
+}
+
+h3 {
+	text-align: center;
+}
+
+p {
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
